--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
 	"version": "1.0.0",
 	"description": "Record the screen on macOS with ScreenCaptureKit",
 	"license": "MIT",
-	"repository": "divyanshunegi/ElectronCaptureKit",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/divyanshunegi/ElectronCaptureKit.git"
+	},
 	"type": "module",
 	"exports": {
 		"types": "./index.d.ts",
@@ -36,5 +39,12 @@
 		"read-chunk": "^4.0.3",
 		"tsd": "^0.30.7",
 		"xo": "^0.58.0"
-	}
+	},
+	"keywords": [
+		"macos",
+		"screen",
+		"recorder",
+		"capture",
+		"video"
+	]
 }
