--- a/package.json
+++ b/package.json
@@ -1,50 +1,44 @@
 {
-	"name": "capturekit",
-	"version": "1.0.0",
-	"description": "Record the screen on macOS with ScreenCaptureKit",
-	"license": "MIT",
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/divyanshunegi/ElectronCaptureKit.git"
-	},
-	"type": "module",
-	"exports": {
-		"types": "./index.d.ts",
-		"default": "./index.js"
-	},
-	"sideEffects": false,
-	"engines": {
-		"node": ">=18"
-	},
-	"scripts": {
-		"build": "swift build --configuration=release --arch arm64 --arch x86_64 && mv .build/apple/Products/Release/capturekit .",
-		"prepublish": "npm run build"
-	},
-	"files": [
-		"index.js",
-		"capturekit",
-		"index.d.ts"
-	],
-	"dependencies": {
-		"delay": "^6.0.0",
-		"electron-util": "^0.18.1",
-		"execa": "^8.0.1",
-		"file-url": "^4.0.0",
-		"macos-version": "^6.0.0",
-		"tempy": "^3.1.0"
-	},
-	"devDependencies": {
-		"ava": "^6.1.2",
-		"file-type": "^19.0.0",
-		"read-chunk": "^4.0.3",
-		"tsd": "^0.30.7",
-		"xo": "^0.58.0"
-	},
-	"keywords": [
-		"macos",
-		"screen",
-		"recorder",
-		"capture",
-		"video"
-	]
+  "name": "capturekit",
+  "version": "1.0.9",
+  "description": "Record the screen on macOS with ScreenCaptureKit",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/divyanshunegi/ElectronCaptureKit.git"
+  },
+  "main": "./index.cjs",
+  "module": "./index.js",
+  "exports": {
+    ".": {
+      "require": "./index.cjs",
+      "import": "./index.js"
+    }
+  },
+  "type": "module",
+  "sideEffects": false,
+  "engines": {
+    "node": ">=18"
+  },
+  "scripts": {
+    "build": "swift build --configuration=release --arch arm64 --arch x86_64 && mv .build/apple/Products/Release/capturekit ."
+  },
+  "files": [
+    "index.js",
+    "index.cjs",
+    "index.mjs",
+    "Recorder.js",
+    "capturekit",
+    "index.d.ts"
+  ],
+  "dependencies": {
+    "execa": "^5.1.1"
+  },
+  "keywords": [
+    "macos",
+    "screen",
+    "recorder",
+    "capture",
+    "video"
+  ]
 }
